codex-rs/tui/src/app/tests/snapshots/codex_tui__app__tests__background_exit_tests__external_writer_view_respects_remapped_left.snap
---
source: tui/src/app/tests/background_exit_tests.rs
expression: "render_bottom_popup(&app.chat_widget, 96)"
---
  🔒   This conversation is open in another app                                      r to retry
      Close it there and press R to continue here.

   r retry   f fork   esc command center   ⌃c/q exit   ← transcript
