codex-rs/tui/src/app/tests/snapshots/codex_tui__app__tests__background_exit_tests__running_task_exit_picker_40.snap
---
source: tui/src/app/tests/background_exit_tests.rs
assertion_line: 227
expression: rendered
---
  Task is still running
  Choose what happens to the current
  task.


› 1. Cancel task
  2. Run in background
  3. Exit

  enter select · esc back
