codex-rs/tui/src/app/tests/snapshots/codex_tui__app__tests__background_exit_tests__running_task_exit_picker_90.snap
---
source: tui/src/app/tests/background_exit_tests.rs
expression: rendered
---
  Task is still running
  Choose what happens to the current task.


› 1. Cancel task        Stop the current task and stay in Codex
  2. Run in background  Exit Codex and leave the task running
  3. Exit               Stop the current task and exit Codex

  enter select · esc back
